added async initalizer function